<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImagePreviewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_preview"
            android:gravity="center_horizontal"
            style="@style/TextAppearance.AppCompat.Title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_title"
            android:gravity="center_horizontal"
            style="@style/TextAppearance.AppCompat.Body1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:contentDescription="@string/image_content_description"
            android:scaleType="fitCenter"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/dsc_itdel" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_caption"
            android:gravity="center_horizontal"
            style="@style/TextAppearance.AppCompat.Caption"/>
    </LinearLayout>

</ScrollView>